# Structure-from-Motion

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
images/: 17.pgm  18.pgm  K_mat_for_0022_img.txt
output/: point3d.xyz
src/: CMakeLists.txt  basicSfM.cpp  essential.cpp  triangulate.h
src_cpp/apps/: main.cpp
src_cpp/images/: 15.pgm  16.pgm  19.pgm
src_cpp/src/: CMakeLists.txt  basicSfM.cpp  basicSfM.h  essential.cpp  essential.h  matches.cpp  matches.h  triangulate.cpp  triangulate.h
src_cpp/src/Camera/: Kseq8.xml
src_cpp/src/SIFT_KeyPoints/: keypoint_nex.txt  keypoint_ref.txt
src_matlab/: K_matrix.txt  compute_chiral_estimate.m  compute_possible_poses.m  details_to_run_code_on_other_sample_examples.txt  reconstruct_3d_points.m  sfm_two_view.m  two_view_sfm.m
src_matlab/features/: nex_keypoint.txt  ref_keypoint.txt
src_matlab/fundamental_matrix_module/: fundmatrix.m  normalise2dpts.m
src_matlab/intermediate_results/: essential_matrix.txt  fundamental_matrix.txt  relative_rotation.txt  relative_translation.txt
src_matlab/mvg_modules/pose_module/: compute_possible_poses.m
src_matlab/mvg_modules/reconstruction_module/: compute_chiral_estimate.m  reconstruct_3d_points.m  triangulate_points.m
src_python/: two_view_sfm.py
